@@ -119,6 +119,7 @@ enum mosq_opt_t {
 	MOSQ_OPT_TLS_ALPN = 10,
 	MOSQ_OPT_TCP_NODELAY = 11,
 	MOSQ_OPT_BIND_ADDRESS = 12,
+	MOSQ_OPT_TLS_USE_OS_CERTS = 13,
 };
 
 
@@ -1451,6 +1452,10 @@ libmosq_EXPORT int mosquitto_opts_set(struct mosquitto *mosq, enum mosq_opt_t op
  *	MOSQ_OPT_TLS_OCSP_REQUIRED - Set whether OCSP checking on TLS
  *	          connections is required. Set to 1 to enable checking,
  *	          or 0 (the default) for no checking.
+ *
+ *	MOSQ_OPT_TLS_USE_OS_CERTS - Set to 1 to instruct the client to load and
+ *	          trust OS provided CA certificates for use with TLS connections.
+ *	          Set to 0 (the default) to only use manually specified CA certs.
  */
 libmosq_EXPORT int mosquitto_int_option(struct mosquitto *mosq, enum mosq_opt_t option, int value);
 
